<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Search">

    <LinearLayout
        android:id="@+id/linearLayout_Search"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <!-- Search Box -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txtInputLayoutSearch"
            style="@style/Theme.TextFields"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="-5dp"
            android:layout_marginRight="-15dp"
            android:layout_weight="0.9"
            app:hintEnabled="false"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginStart="-5dp"
            android:layout_marginEnd="-15dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txtInputEditTextSearch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/searchInputHint"
                android:inputType="text"
                android:maxLines="1"
                android:scaleX="0.9"
                android:scaleY="0.9" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="10dp"
            android:layout_weight="0.1"
            android:paddingVertical="12dp"
            app:icon="@drawable/ic_baseline_search_24"
            app:iconGravity="textStart"
            app:iconPadding="0dp"
            android:onClick="handleSearchMovie"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="10dp" />
    </LinearLayout>


    <!--  TITLE  -->
    <TextView
        android:id="@+id/textViewTitleSection"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/titleSectionHeaderPlaceholderText"
        android:layout_marginBottom="5dp"
        android:textColor="@color/secondaryDarkColor"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linearLayout_Search"
        android:visibility="gone"/>

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="?attr/selectableItemBackground"
        android:minHeight="64dp"
        app:layout_constraintBottom_toTopOf="@id/textViewDirectorSection"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewTitleSection"
        android:visibility="gone">

        <ListView
            android:id="@+id/searchMoviesListView_ByTitle"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </LinearLayout>

    <!--  DIRECTOR  -->
    <TextView
        android:id="@+id/textViewDirectorSection"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="15dp"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/directorSectionHeaderPlaceholderText"
        android:textColor="@color/secondaryDarkColor"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linearLayout1"
        android:visibility="gone"/>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="?attr/selectableItemBackground"
        android:minHeight="64dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewDirectorSection"
        android:visibility="gone">

        <ListView
            android:id="@+id/searchMoviesListView_ByDirector"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
    </LinearLayout>

    <!--  CAST  -->
    <TextView
        android:id="@+id/textViewCastSection"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="15dp"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/castSectionHeaderPlaceholderText"
        android:textColor="@color/secondaryDarkColor"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linearLayout2"
        android:visibility="gone"/>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="?attr/selectableItemBackground"
        android:minHeight="64dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewCastSection"
        android:visibility="gone">

        <ListView
            android:id="@+id/searchMoviesListView_ByCast"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>